Shifted Model workload to repository file for user and used env file

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/node,vuejs,webstorm
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,vuejs,webstorm
 
+# Environment variable file
+.env
+
 ### Node ###
 # Logs
 logs
